--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -16,7 +16,7 @@
             {{ macros.setting_checkbox('scrape', 'Scrape 사용', value=arg['scrape'], desc='피어 정보도 받아옵니다. 활성 토렌트인지 확인할 때 유용. 대신 오래 걸림.') }}
             {{ macros.setting_input_int('timeout', '대기 시간', value=arg['timeout'], min='1', placeholder='30', desc='마그넷 정보를 받아올때 너무 오래 걸리면 중지합니다. 단위: 초') }}
             {{ macros.setting_input_int('n_try', '시도 횟수', value=arg['n_try'], min='1', max='256', placeholder='1', desc='최솟값: 1 (처음 한 번만 시도)') }}
-            {{ macros.setting_input_text('http_proxy', 'HTTP Proxy', value=arg['http_proxy'], placeholder='Proxy URL을 입력하세요.', desc=['DHT가 꺼지고 모든 연결이 프록시를 통하므로 udp가 아닌 http 트래커가 필요합니다. 비워두면 적용하지 않습니다.']) }}
+            {{ macros.setting_input_text('http_proxy', 'HTTP Proxy', value=arg['http_proxy'], placeholder='http://username:password@hostname:port/', desc=['DHT가 꺼지고 모든 연결이 프록시를 통하므로 udp가 아닌 http 트래커가 필요합니다. 비워두면 적용하지 않습니다.']) }}
             {{ macros.setting_input_int('list_pagesize', '페이지 크기', value=arg['list_pagesize'], min='1', max='100', placeholder='20', desc='검색 결과 로딩 단위') }}
             {{ macros.setting_button([['global_setting_save_btn', '저장']]) }}
         </form>
@@ -116,7 +116,7 @@
     function update_cache_status(data) {
         if (data.success) {
             $('#clear_cache_btn').parent().next().html(
-                '<em>현재 ' + data.info.length.toString() + '개의 토렌트 정보를 저장 중</em>'
+                '<em>현재 ' + data.count.toString() + '개의 토렌트 정보를 저장 중</em>'
             );
         } else {
             $('#clear_cache_btn').parent().next().html(
@@ -133,7 +133,7 @@
             type: "POST",
             cache: false,
             dataType: "json",
-            data: {clear: true},
+            data: {action: "clear"},
             success: function(data) {
                 update_cache_status(data);
             }
