--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -37,6 +37,7 @@
         {{ macros.m_tab_content_start('기타', false) }}
         {{ macros.info_text('plugin_ver', left='플러그인 버전', value=arg['plugin_ver']) }}
         {{ macros.setting_button_with_info([['install_btn', '설치하기']], 'libtorrent 설치', 'alpine 도커만 지원. 네이티브라면 직접 설치 후 새로고침 해 보세요.') }}
+        {{ macros.setting_button_with_info([['uninstall_btn', '삭제하기']], 'libtorrent 삭제', '설치가 안되면 삭제 후 다시 시도해 보세요.') }}
         {{ macros.setting_button_with_info([['clear_cache_btn', '재설정']], '검색 결과 비우기', '') }}
         {{ macros.m_hr() }}
         {{ macros.info_text_go('json_api', 'JSON API', value=arg['json_api'], desc=['', '파라미터 (둘 중 하나 반드시 입력)', ' - uri: 마그넷 주소. magnet으로 시작하지 않으면 hash로 간주하여 자동완성. 인코딩 된 주소 권장', ' - url: 웹에 있는 토렌트 파일 주소. SJVA에서 접근할 수 있어야 함.']) }}
@@ -111,6 +112,28 @@
             }
         });
     });
+
+// libtorrent 설치 버튼
+$("body").on('click', '#uninstall_btn', function(e) {
+    e.preventDefault();
+    $.ajax({
+        url: '/' + package_name + '/ajax/uninstall',
+        type: "POST",
+        cache: false,
+        dataType: "json",
+        success: function(data) {
+            if (data.success) {
+                $.notify('<strong>삭제하였습니다.</strong>', {
+                    type: 'success'
+                });
+            } else {
+                $.notify('<strong>실패하였습니다.</strong><br>' + data.log, {
+                    type: 'warning'
+                });
+            }
+        }
+    });
+});
 
     // 캐시 현황 업데이트
     function update_cache_status(data) {
