--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -3,25 +3,25 @@
 <div class="mt-3">토렌트 파일 정보</div>
 
 <form>
-  <div class="custom-file mt-2">
-    <input type="file" accept=".torrent" class="custom-file-input" id="customFile">
-    <label class="custom-file-label" for="customFile"></label>
-  </div>
-  <button id="get_info_file_btn" name="get_info_file_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">가져오기</button>
+    <div class="custom-file mt-2">
+        <input type="file" accept=".torrent" class="custom-file-input" id="customFile">
+        <label class="custom-file-label" for="customFile"></label>
+    </div>
+    <button id="get_info_file_btn" name="get_info_file_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">가져오기</button>
 </form>
 
 <form>
     <div class="form-group mt-3 mb-2">
         <label for="uri_url">마그넷 혹은 웹에 있는 토렌트 주소</label>
-        <input type="url" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
-        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 그렇지 않으면 마그넷 해쉬값으로 간주</small>
+        <input type="text" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
+        <small id="urlhelp" class="form-text text-muted">http나 magnet으로 시작하는 주소를 입력하세요. 아니면 캐시에서 토렌트 이름 검색</small>
     </div>
     <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
 
 <div class="mt-3 d-flex w-100 justify-content-between">
     <h6 class="mt-2 mb-0" style="flex: 1;">최근 검색 결과 <span class="text-muted small" id="cache-loaded"></span></h6>
-    <button id="clear_cache_btn" name="clear_cache_btn" class="btn btn-sm btn-outline-danger">전체삭제</button>
+    <button id="remove_list_items" name="remove_list_items" class="btn btn-sm btn-outline-danger">목록삭제</button>
 </div>
 <!--TODO: 이름으로 검색-->
 
@@ -80,7 +80,7 @@
 
 <script type="text/javascript">
     var package_name = 'torrent_info';
-    var current_cache_size = "{{arg['cache_size']}}";
+    var list_url_base = `/${package_name}/ajax/cache?action=list`;
 
     // Get references to the dom elements
     var scroller = document.querySelector("#search-history");
@@ -89,21 +89,26 @@
     var sentinel = document.querySelector('#sentinel');
 
     var counter = 0;
+    var list_total = parseInt("{{arg['cache_size']}}");
+    var list_url = list_url_base;
 
     // Function to request new items and render to the dom
     // https://pythonise.com/categories/javascript/infinite-lazy-loading
     function loadItems() {
         // Use fetch to request data and pass the counter value in the QS
-        fetch(`/${package_name}/ajax/cache?action=list&c=${counter}`).then((response) => {
+        fetch(`${list_url}&c=${counter}`).then((response) => {
             response.json().then((res) => {
                 if (!res.success) {
                     sentinel.innerHTML = `ERROR: ${res.log}`;
                     return;
                 }
                 var data = res.info;
+                if (res.total) {
+                    list_total = res.total;
+                }
                 if (!data.length) {
                     sentinel.innerHTML = "No more items";
-                    loaded.innerText = `${counter}/${current_cache_size}`;
+                    loaded.innerText = `${counter}/${list_total}`;
                     return;
                 }
                 // Iterate over the items in the response
@@ -112,7 +117,7 @@
                     // Increment the counter
                     counter += 1;
                     // Update the counter
-                    loaded.innerText = `${counter}/${current_cache_size}`;
+                    loaded.innerText = `${counter}/${list_total}`;
                 }
             })
         })
@@ -139,7 +144,15 @@
 
     // Instruct the IntersectionObserver to watch the sentinel
     intersectionObserver.observe(sentinel);
-  
+
+    function reloadItems(list_url_params='') {
+        list_url = list_url_base + list_url_params;
+        intersectionObserver.unobserve(sentinel);
+        scroller.querySelectorAll('*').forEach(n => n.remove());
+        counter = 0;
+        intersectionObserver.observe(sentinel);
+    }
+
     $(".custom-file-input").on("change", function() {
         var fileName = $(this).val().split("\\").pop();
         $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
@@ -155,7 +168,7 @@
             return;
         }
         var form_data = new FormData();
-        form_data.append('file',current_file);
+        form_data.append('file', current_file);
         $.ajax({
             url: '/' + package_name + '/ajax/get_file_info',
             type: "POST",
@@ -165,10 +178,7 @@
             contentType: false,
             success: function(data) {
                 if (data.success) {
-                    render_single_item(data.info);
-                    current_cache_size += 1;
-                    counter += 1;
-                    loaded.innerText = `${counter}/${current_cache_size}`;
+                    reloadItems(`&infohash=${data.info.info_hash}`);
                 } else {
                     $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                         type: 'warning'
@@ -186,14 +196,10 @@
                 type: 'warning'
             });
             return;
-        } else if (uri_url.startsWith("magnet:?xt=urn:btih:")) {
-            get_torrent_info(uri_url);
-        } else if (uri_url.startsWith("http")) {
+        } else if (uri_url.startsWith("magnet") || uri_url.startsWith("http")) {
             get_torrent_info(uri_url);
         } else {
-            uri_url = "magnet:?xt=urn:btih:" + uri_url;
-            $("#uri_url").val(uri_url);
-            get_torrent_info(uri_url);
+            reloadItems(`&name=${uri_url}`);
         }
     });
 
@@ -208,10 +214,7 @@
             dataType: "json",
             success: function(data) {
                 if (data.success) {
-                    render_single_item(data.info);
-                    current_cache_size += 1;
-                    counter += 1;
-                    loaded.innerText = `${counter}/${current_cache_size}`;
+                    reloadItems(`&infohash=${data.info.info_hash}`);
                 } else {
                     $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                         type: 'warning'
@@ -398,9 +401,9 @@
             success: function (data) {
                 if (data.success) {
                     $(card).fadeOut(300, function() { $(card).remove(); });
-                    current_cache_size -= 1;
+                    list_total -= 1;
                     counter -= 1;
-                    loaded.innerText = `${counter}/${current_cache_size}`;
+                    loaded.innerText = `${counter}/${list_total}`;
                 } else {
                     $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                         type: 'warning'
@@ -410,22 +413,41 @@
         });        
     });
     
-    $("body").on('click', '#clear_cache_btn', function(e) {
+    $("body").on('click', '#remove_list_items', function(e) {
         e.preventDefault();
+        var infohash = [];
+        scroller.querySelectorAll('div.card').forEach(n => infohash.push($(n).attr('infohash')));
+        document.getElementById("confirm_title").innerHTML = "캐시 삭제";
+        document.getElementById("confirm_body").innerHTML = `${infohash.length}개 항목을 삭제합니다.`;
+        $('#confirm_button').attr('onclick', 'remove_list_items_from_cache("'+infohash+'");');
+        $("#confirm_modal").modal();
+        return;
+    });
+
+    function remove_list_items_from_cache(infohash) {
         $.ajax({
             url: '/' + package_name + '/ajax/cache',
             type: "POST",
             cache: false,
             dataType: "json",
-            data: {action: "clear"},
+            data: {
+                'action': "delete",
+                'infohash': infohash
+            },
             success: function(data) {
-                scroller.querySelectorAll('*').forEach(n => n.remove());
-                current_cache_size = 0;
-                counter = 0;
-                loaded.innerText = `${counter}/${current_cache_size}`;
+                if (data.success) {
+                    scroller.querySelectorAll('*').forEach(n => n.remove());
+                    list_total = 0;
+                    counter = 0;
+                    loaded.innerText = `${counter}/${list_total}`;
+                } else {
+                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
+                        type: 'warning'
+                    });
+                }
             }
         });
-    });
+    }
 
 </script>
 
