--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -79,7 +79,7 @@
 
 
 <script type="text/javascript">
-    var package_name = 'torrent_info';
+    var package_name = "{{arg['package_name']}}";
     var list_url_base = `/${package_name}/ajax/cache?action=list`;
 
     // Get references to the dom elements
