--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -53,7 +53,7 @@
 
 
 <script type="text/javascript">
-    var package_name = 'torrent_info';
+    var package_name = "{{arg['package_name']}}";
 
     $(document).ready(function() {
 
